imagens dos lanches

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li>
             <div class="details">
               <h3>X-Burguer</h3>
+              <img src="./xburguer.jpg" alt="xburguer">
               <p class="description"><strong>Pão, Hamburguer artesanal, Alface, Tomate, Molho da casa, Queijo Mussarela.</strong></p>
             </div>
 
@@ -32,6 +33,7 @@
           <li>
             <div class="details">
               <h3>X-Bacon</h3>
+              <img src="./xbacon.jpg" alt="xbacon">
               <p class="description"><strong>Pão, Hamburguer artesanal, Alface, Tomate, Molho da casa, Bacon.</strong></p>
             </div>
 
@@ -43,6 +45,7 @@
           <li>
             <div class="details">
               <h3>X-Tudo</h3>
+              <img src="./xtudo.jpg" alt="xtudo">
               <p class="description"><strong>Pão, Hamburguer artesanal, Bacon, Frango, Ovo, Alface, Tomate, Molho da casa, Presunto e Queijo Mussarela.</strong></p>
             </div>
 
